--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -8,3 +8,5 @@ jobs:
         - uses: actions/checkout@v2
         - name: Conventional Changelog Action
           uses: TriPSs/conventional-changelog-action@v3
+          with:
+            github-token: ${{ secrets.github_token }}
