ci: Skip on empty

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -13,3 +13,4 @@ jobs:
             git-user-name: 'WidgetBot Changelogs'
             git-user-email: 'system@widgetbot.io'
             tag-prefix: 'v'
+            skip-on-empty: 'false'
