--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -16,6 +16,6 @@ jobs:
         run: sbt docker:stage
       - name: Build the DockerFile
         run: docker build -t ghcr.io/widgetbot-io/hookla:${{github.sha}} .
-        working-directory: target/docker/stage
+        working-directory: ./target/docker/stage
       - name: Push the Docker image
         run: docker push ghcr.io/widgetbot-io/hookla:${{github.sha}}
