--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -15,7 +15,6 @@ jobs:
           sbt compile
           sbt docker:stage
       - name: Build the DockerFile
-        run: docker build -t ghcr.io/widgetbot-io/hookla:${{github.sha}} .
-        working-directory: ./target/docker/stage
+        run: docker build -t ghcr.io/widgetbot-io/hookla:${{github.sha}} target/docker/stage
       - name: Push the Docker image
         run: docker push ghcr.io/widgetbot-io/hookla:${{github.sha}}
