refactor: Start the GBBC

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,7 @@
-maxColumn = 200
-align = more
+version = 2.7.5
+
+rewrite.rules = [AsciiSortImports]
+align.preset = more
+maxColumn = 100
 align.openParenCallSite = false
 align.openParenDefnSite = false
