--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+.idea
+.idea/*
+
 ## File-based project format:
 *.iws
 
@@ -58,6 +61,8 @@ gradle-app.setting
 hs_err_pid*
 
 #### scala ####
+
+*.class
 *.log
 
 # sbt specific
@@ -78,5 +83,3 @@ project/plugins/project/
 # ENSIME specific
 .ensime_cache/
 .ensime
-
-.bsp
