style: New scalafmt

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,7 +1,11 @@
 version = 2.7.5
-
-rewrite.rules = [AsciiSortImports]
-align.preset = more
 maxColumn = 200
+
+newlines.topLevelStatements = [before, after]
+newlines.implicitParamListModifierPrefer = before
+newlines.afterCurlyLambda = squash
+newlines.alwaysBeforeMultilineDef = false
+
 align.openParenCallSite = false
 align.openParenDefnSite = false
+align.preset = more
