feat: Clearer error logging

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,11 +1,12 @@
 version = "2.7.5"
 project.git = true
 preset = defaultWithAlign
-maxColumn = 200
+maxColumn = 500
 
 assumeStandardLibraryStripMargin = true
 
 newlines.implicitParamListModifierPrefer = before
+newlines.afterCurlyLambdaParams = squash
 
 rewrite.rules = [
   RedundantBraces,
