--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,6 +7,10 @@ app {
   port = ${?INTERNAL_PORT}
 }
 
+discord {
+  token = ${DISCORD_TOKEN}
+}
+
 postgres {
   url: "jdbc:postgresql://"${DB_HOST}":"${DB_PORT}"/"${DB_DATABASE}"?user="${DB_USER}"&password="${DB_PASSWORD}
   connectionTimeout: 3000
