feat: Add redis and AuthService with JWT handling and expiry

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,6 +11,12 @@ discord {
   token = ${DISCORD_TOKEN}
 }
 
+auth {
+  jwtSecret = "secret_key69"
+
+  jwtSecret = ${?JWT_SECRET}
+}
+
 postgres {
   url: "jdbc:postgresql://"${DB_HOST}":"${DB_PORT}"/"${DB_DATABASE}"?user="${DB_USER}"&password="${DB_PASSWORD}
   connectionTimeout: 3000
