--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: olafurpg/setup-scala@v11
         with:
-          java-version: corretto@17
+          java-version: amazon-corretto@1.17.0-0.35.1
       - name: Clean any left-over files
         run: sbt clean
       - name: Login to docker
